force-app/main/default/objects/msf_MasterRecord__c/msf_MasterRecord__c.object-meta.xml
<CustomObject>
    <description>Objeto custom para registrar maestros que se utilizarán en diferentes acciones dentro del sistema

(ej. cuentas inclusión/exclusión ficheros N43)</description>
    <label>Maestro</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Nombre maestro</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Maestros</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>