force-app/main/default/objects/msf_MasterRecord__c/fields/msf_Value__c.field-meta.xml
<CustomField>
    <fullName>msf_Value__c</fullName>
    <label>Valor</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>