force-app/main/default/objects/msf_MasterRecord__c/validationRules/MSF_mandatory_field_valor_object_Maestro.validationRule-meta.xml
<ValidationRule>
    <fullName>MSF_mandatory_field_valor_object_Maestro</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK(msf_Value__c )</errorConditionFormula>
    <errorMessage>El campo valor no puede estar en blanco</errorMessage>
</ValidationRule>