force-app/main/default/objects/msf_MasterRecord__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>msf_FamilyId__c</columns>
    <columns>msf_RecordId__c</columns>
    <columns>msf_Value__c</columns>
    <columns>msf_Description__c</columns>
    <columns>OBJECT_ID</columns>
    <columns>LAST_UPDATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>