force-app/main/default/objects/msf_MasterRecord__c/listViews/Filtros_Inclusion_Editran.listView-meta.xml
<ListView>
    <fullName>Filtros_Inclusion_Editran</fullName>
    <columns>NAME</columns>
    <columns>msf_FamilyId__c</columns>
    <columns>msf_RecordId__c</columns>
    <columns>msf_Value__c</columns>
    <columns>msf_Description__c</columns>
    <columns>OBJECT_ID</columns>
    <columns>LAST_UPDATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>msf_FamilyId__c</field>
        <operation>equals</operation>
        <value>FIED</value>
    </filters>
    <label>Filtros Inclusion Editran</label>
    <sharedTo>
        <role>MSF</role>
    </sharedTo>
</ListView>